2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Correctly adjust end
	  offset.

2010-05-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Fixed 'Bug 607154 -
	  Negative column on rename refactoring'.

2010-05-19  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fix typo.

	* Mono.TextEditor/Platform.cs: Copy MapRawKeys changes from
	  KeyBindingManager.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs: Advanced text markers can
	  now provide tooltips.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/HslColor.cs: Now supports cairo color
	  conversion.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs: Added basic support for
	  extending markers.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: fixed gtk
	  criticals.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: Improved multi
	  monitor support.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 604999 -
	  Horizontal scrolling during search is annoying'.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 538800 - Tab
	  positions are at wrong offsets'.


2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Improved type flow on the
	  mac: convert non breaking space -> standard space.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Dispose animations & fixing
	  'Bug 606206 - Null ref in highlighting'.
